# cozo-migrate

./: .gitignore  LICENSE  README.md  TODOS.md  pyproject.toml
cozo_migrate/: __init__.py  __main__.py  context.py  defaults.py  files.py  history.py  modules.py  ops.py  queries.py  schema.py  template.py  types.py
cozo_migrate/api/: __init__.py  apply.py  create.py  history.py  init.py  status.py
cozo_migrate/app/: apply.py  create.py  history.py  init.py  main.py  status.py
cozo_migrate/cli/: __init__.py  apply.py  create.py  history.py  init.py  main.py  show.py  status.py  version.py
cozo_migrate/utils/: client.py  console.py  datetime.py  fn.py  rich.py
test/migrations/: migrate_1704506472_init.py  migrate_1704519286_banana.py  migrate_1704550975_apple.py  migrate_1704669102_orange.py
