[tool.poetry]
name = "cozo-migrate"
version = "0.2.4"
description = "A simple utility for migrations for cozo db"
authors = ["Diwank Singh Tomer <diwank.singh@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = ">=0.9.0"
rich = ">=13.0.0,<14.0.0"
pycozo = "^0.7.6"
colorama = ">=0.4.0,<0.6.0"
shellingham = ">=1.4.0,<2.0.0"
pandas = ">=2.0.0,<2.5.0"
cozo-embedded = "^0.7.6"
requests = ">=2.0.0,<3.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.11"
ward = "^0.68.0b0"
black = "^23.12.1"
pytype = "^2024.1.5"
poethepoet = "^0.24.4"

[tool.poetry.scripts]
cozo-migrate = "cozo_migrate:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.poetry_hooks]
pre_build = "check"

[tool.poe.tasks]
prettify = "black ."
lint = "ruff **/*.py --fix --unsafe-fixes"
typecheck = "pytype cozo_migrate"
check = [
    "prettify",
    "lint",
    "typecheck",
]

test = [
    { cmd = "cozo-migrate -f cozo.db init" },
    { cmd = "cozo-migrate -d dummy/migrations create hello -y" },
    { cmd = "cozo-migrate -f cozo.db -d test/migrations apply -y --compact" },
    { cmd = "cozo-migrate -f cozo.db status" },
    { cmd = "cozo-migrate -f cozo.db show" },
    { cmd = "cozo-migrate -f cozo.db -d test/migrations apply -ay --down" },
    { cmd = "cozo-migrate -f cozo.db history" },
    { cmd = "rm -rf cozo.db dummy/migrations" },
]
